--- a/.github/workflows/compile-and-release.yml
+++ b/.github/workflows/compile-and-release.yml
@@ -37,9 +37,8 @@ jobs:
         shell: bash
         run: |
           EOF=$(dd if=/dev/urandom bs=15 count=1 status=none | base64)
-          RES=$(git log --pretty=format:'%s' --branches=origin/v5 $(git describe --tags `git rev-list --tags --max-count=1`)..HEAD)
+          RES=$(git log --pretty=format:'- %s' --branches=origin/v5 $(git describe --tags `git rev-list --tags --max-count=1`)..HEAD)
           echo "commits<<${EOF}" >> $GITHUB_OUTPUT
-          echo "## v${{ steps.package.outputs.version }} Update Notes" >> $GITHUB_OUTPUT
           echo "${RES}" >> $GITHUB_OUTPUT
           echo "${EOF}" >> $GITHUB_OUTPUT
 
@@ -131,6 +130,16 @@ jobs:
       - name: Rename Artifacts
         run: mv ./bundles/Windows/firebot-${{ needs.checkversion.outputs.version }}-full.nupkg ./bundles/Windows/firebot-v${{ needs.checkversion.outputs.version }}-full.nupkg
 
+      - name: Prepare Release notes
+        id: releasetemplate
+        shell: bash
+        run: |
+          EOF=$(dd if=/dev/urandom bs=15 count=1 status=none | base64)
+          TEMPLATE=$(<release-template.md)
+          echo "body<<${EOF}" >> $GITHUB_OUTPUT
+          echo "${TEMPLATE}" >> $GITHUB_OUTPUT
+          echo "${EOF}" >> $GITHUB_OUTPUT
+
       - name: Create Release
         uses: softprops/action-gh-release@v1
         env:
@@ -141,7 +150,8 @@ jobs:
           prerelease: false
           tag_name: v${{ needs.checkversion.outputs.version }}
           name: Release v${{ needs.checkversion.outputs.version }}
-          body: ${{ needs.checkversion.outputs.commits }}
+          # body: ${{ needs.checkversion.outputs.commits }}
+          body: ${{ format(steps.releasetemplate.outputs.body, needs.checkversion.outputs.version, needs.checkversion.outputs.commits) }}
           generate_release_notes: false
           files: |
             ./bundles/Windows/firebot-v${{ needs.checkversion.outputs.version }}-setup.exe
