--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "build/main.js",
   "scripts": {
     "start": "grunt prep && electron . --dev",
-    "rebuild": "node-gyp rebuild --directory=node_modules/robotjs/ --runtime=electron --target=12.2.2 --arch=x64 --dist-url=https://artifacts.electronjs.org/headers/dist --abi=87 --force-process-config",
-    "rebuild:new": "npm rebuild --runtime=electron --target=12.2.2 --disturl=https://artifacts.electronjs.org/headers/dist --abi=87",
+    "rebuild": "node-gyp rebuild --directory=node_modules/robotjs/ --runtime=electron --target=23.1.3 --arch=x64 --dist-url=https://artifacts.electronjs.org/headers/dist",
+    "rebuild:new": "npm rebuild --runtime=electron --target=23.1.3 --disturl=https://artifacts.electronjs.org/headers/dist --abi=113",
     "setup": "npm ci && npm rebuild && npm run rebuild",
     "build": "grunt build",
     "lint": "grunt lint"
@@ -42,7 +42,7 @@
     "grunt-shell": "^3.0.1",
     "husky": "^0.14.3",
     "node-gyp": "^8.4.1",
-    "node-sass": "^4.14.1",
+    "node-sass": "^8.0.0",
     "rimraf": "^3.0.2",
     "typescript": "^4.7.2"
   },
@@ -145,5 +145,8 @@
   "volta": {
     "node": "18.12.1",
     "npm": "8.19.2"
+  },
+  "resolutions": {
+    "nan": "github:jkleinsc/nan#remove_accessor_signature"
   }
 }
