--- a/package.json
+++ b/package.json
@@ -41,8 +41,8 @@
     "grunt-shell": "^3.0.1",
     "husky": "^0.14.3",
     "node-gyp": "^8.4.1",
-    "node-sass": "^4.14.1",
     "rimraf": "^3.0.2",
+    "sass": "^1.58.3",
     "typescript": "^4.7.2"
   },
   "dependencies": {
