fix(integrations): :bug: emit integrationsUpdated event to F/E when integrations are registered
#2106

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,26 +6,27 @@
     },
     "editor.formatOnSave": true,
     "conventionalCommits.scopes": [
-        "effects",
-        "events",
-        "integratins",
-        "variables",
-        "filters",
-        "commands",
-        "timers",
-        "hotkeys",
-        "quick-actions",
-        "chat",
-        "conditionals",
-        "restrictions",
-        "twitch-api",
-        "games",
-        "counters",
-        "channel-rewards",
-        "auth",
-        "local-api",
-        "ui",
-        "overlay",
-        "scripts"
+      "effects",
+      "events",
+      "integratins",
+      "variables",
+      "filters",
+      "commands",
+      "timers",
+      "hotkeys",
+      "quick-actions",
+      "chat",
+      "conditionals",
+      "restrictions",
+      "twitch-api",
+      "games",
+      "counters",
+      "channel-rewards",
+      "auth",
+      "local-api",
+      "ui",
+      "overlay",
+      "scripts",
+      "integrations"
     ]
 }
