--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -31,6 +31,7 @@
     "eslint-config-custom": "*",
     "supertest": "^6.1.3",
     "tsconfig": "*",
-    "tsconfig-paths": "4.1.1"
+    "tsconfig-paths": "4.1.1",
+    "firebot-types": "*"
   }
 }
