--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -21,7 +21,8 @@
     "@nestjs/platform-fastify": "^9.3.8",
     "@nestjs/serve-static": "^3.0.1",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "firebot-types": "*"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.2.0",
@@ -31,7 +32,6 @@
     "eslint-config-custom": "*",
     "supertest": "^6.1.3",
     "tsconfig": "*",
-    "tsconfig-paths": "4.1.1",
-    "firebot-types": "*"
+    "tsconfig-paths": "4.1.1"
   }
 }
