fix: restore from backup

--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "eventsource": "^1.0.7",
     "express": "^4.17.1",
     "expressionish": "github:SReject/expressionish#0612b3d3c0f0ff2e73dfb4c3d8b92e929397c7cd",
+    "fflate": "^0.8.1",
     "form-data": "^4.0.0",
     "fs-extra": "^7.0.1",
     "fuse.js": "^3.4.6",
@@ -128,7 +129,6 @@
     "tiny-typed-emitter": "^2.1.0",
     "ui-select": "^0.19.8",
     "underscore": "^1.13.1",
-    "unzipper": "^0.9.15",
     "uuid": "^3.3.3",
     "winston": "^2.4.4",
     "winston-daily-rotate-file": "^1.4.6",
