feat: EventSub integration

--- a/package.json
+++ b/package.json
@@ -47,10 +47,11 @@
     "@aws-sdk/client-polly": "^3.26.0",
     "@crowbartools/firebot-custom-scripts-types": "^5.53.2-6",
     "@nut-tree/nut-js": "^3.1.1",
-    "@twurple/api": "^6.0.9",
-    "@twurple/auth": "^6.0.9",
-    "@twurple/chat": "^6.0.9",
-    "@twurple/pubsub": "^6.0.9",
+    "@twurple/api": "^7.0.6",
+    "@twurple/auth": "^7.0.6",
+    "@twurple/chat": "^7.0.6",
+    "@twurple/eventsub-ws": "^7.0.6",
+    "@twurple/pubsub": "^7.0.6",
     "@zunderscore/elgato-light-control": "^1.1.2",
     "angular": "^1.8.0",
     "angular-animate": "^1.7.8",
