--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@types/cron": "^2.0.0",
     "@types/express": "^4.17.1",
+    "@types/fs-extra": "^11.0.4",
     "@types/luxon": "^3.1.0",
     "@typescript-eslint/eslint-plugin": "^5.32.0",
     "@typescript-eslint/parser": "^5.32.0",
@@ -71,7 +72,6 @@
     "angularjs-color-picker": "^3.4.8",
     "angularjs-scroll-glue": "^2.2.0",
     "angularjs-slider": "^6.7.0",
-    "archiver": "^2.1.1",
     "axios": "^0.21.1",
     "big-text.js": "^1.0.1",
     "body-parser": "^1.19.0",
@@ -99,8 +99,9 @@
     "expressionish": "github:SReject/expressionish#0612b3d3c0f0ff2e73dfb4c3d8b92e929397c7cd",
     "fflate": "^0.8.1",
     "form-data": "^4.0.0",
-    "fs-extra": "^7.0.1",
+    "fs-extra": "^11.2.0",
     "fuse.js": "^3.4.6",
+    "glob": "^10.3.10",
     "he": "^1.2.0",
     "howler": "https://github.com/ebiggz/howler.js/tarball/master",
     "js-convert-case": "^4.1.1",
