--- a/.github/workflows/test-updates.yml
+++ b/.github/workflows/test-updates.yml
@@ -24,8 +24,8 @@ jobs:
       - name: Checkout branch
         uses: 'actions/checkout@v3'
 
-      - name: Run Test Dependencies
+      - name: Install Dependencies
         run: npm install
 
-      - name: Run Linter
+      - name: Lint
         run: npx --no-install eslint . --quiet
