update deps and implement authenticated websocket connection between f/e & b/e

--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -8,7 +8,7 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "lint": "eslint --fix --ext .ts,.tsx src/**",
-    "nest:dev": "npm run start:dev",
+    "predev": "npm run build",
     "neststart": "nest start",
     "neststart:dev": "nest start --watch",
     "neststart:debug": "nest start --debug --watch",
@@ -17,12 +17,12 @@
   "dependencies": {
     "@fastify/cookie": "^9.2.0",
     "@fastify/static": "^6.9.0",
-    "@nestjs/common": "^9.3.8",
-    "@nestjs/core": "^9.3.8",
-    "@nestjs/platform-fastify": "^9.3.8",
-    "@nestjs/platform-ws": "^9.3.8",
-    "@nestjs/serve-static": "^3.0.1",
-    "@nestjs/websockets": "^9.3.8",
+    "@nestjs/common": "^10.3.0",
+    "@nestjs/core": "^10.3.0",
+    "@nestjs/platform-fastify": "^10.3.0",
+    "@nestjs/platform-ws": "^10.3.0",
+    "@nestjs/serve-static": "^4.0.0",
+    "@nestjs/websockets": "^10.3.0",
     "firebot-types": "*",
     "openid-client": "^5.6.2",
     "reflect-metadata": "^0.1.13",
@@ -30,9 +30,9 @@
     "ws": "^8.16.0"
   },
   "devDependencies": {
-    "@nestjs/cli": "^9.2.0",
-    "@nestjs/schematics": "^9.0.4",
-    "@nestjs/testing": "^9.3.8",
+    "@nestjs/cli": "^10.2.1",
+    "@nestjs/schematics": "^10.0.3",
+    "@nestjs/testing": "^10.3.0",
     "@types/supertest": "^2.0.11",
     "@types/ws": "^8.5.10",
     "eslint-config-custom": "*",
