--- a/apps/electron/package.json
+++ b/apps/electron/package.json
@@ -4,22 +4,23 @@
     "version": "6.0.0",
     "license": "GPL-3.0",
     "main": "./dist/index.js",
-
     "scripts": {
         "build": "tsc",
-        "dev": "node ./scripts/watch.js",
-        "lint": "eslint --fix --ext .ts,.tsx src/**",
-        "precompile": "node ./scripts/pre-compile/index.js"
+        "watch": "tsc -w",
+        "dev": "npm run build && cross-env NODE_ENV=development electron ./dist/index.js",
+        "lint": "eslint --fix --ext .ts,.tsx src/**"
     },
     "devDependencies": {
+        "@nestjs/platform-fastify": "^10.3.0",
+        "cross-env": "^7.0.3",
         "electron": "^23.0.0",
         "eslint-config-custom": "*",
         "tsc-watch": "^6.0.0",
         "tsconfig": "*"
     },
     "dependencies": {
-        "backend": "*",
-        "assets": "*"
+        "assets": "*",
+        "backend": "*"
     },
     "engines": {
         "node": ">=18.12.1",
