--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -38,6 +38,7 @@
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-use": "^17.4.0"
+    "react-use": "^17.4.0",
+    "reconnecting-websocket": "^4.4.0"
   }
 }
