feat(effects): output parity for regular and obs source screenshot effects #2325

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,5 +23,8 @@
       "ui",
       "overlay",
       "scripts"
-    ]
+    ],
+    "[typescript]": {
+      "editor.defaultFormatter": "dbaeumer.vscode-eslint"
+    }
 }
