--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -18,15 +18,19 @@
     "@fastify/cookie": "^9.2.0",
     "@fastify/static": "^6.9.0",
     "@nestjs/common": "^10.3.0",
+    "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.3.0",
     "@nestjs/platform-fastify": "^10.3.0",
     "@nestjs/platform-ws": "^10.3.0",
     "@nestjs/serve-static": "^4.0.0",
     "@nestjs/websockets": "^10.3.0",
     "firebot-types": "*",
+    "joi": "^17.11.0",
+    "lowdb": "^7.0.1",
     "openid-client": "^5.6.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
+    "tiny-typed-emitter": "^2.1.0",
     "ws": "^8.16.0"
   },
   "devDependencies": {
