--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "eventsource": "^1.0.7",
     "express": "^4.17.1",
     "expressionish": "github:SReject/expressionish#87101258cc46c1cee83a0e7d4c3ca58689ccba27",
+    "extra-life-ts": "^0.4.0",
     "fflate": "^0.8.1",
     "form-data": "^4.0.0",
     "fs-extra": "^11.2.0",
