--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -27,6 +27,7 @@
     "firebot-types": "*",
     "joi": "^17.11.0",
     "lowdb": "^7.0.1",
+    "node-json-db": "^1.6.0",
     "openid-client": "^5.6.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
