chore(backup): move restore logic to backend, remove ununsed packages

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/express": "^4.17.1",
     "@types/fs-extra": "^11.0.4",
     "@types/luxon": "^3.1.0",
+    "@types/node": "^18.18.2",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
     "electron": "^28.1.1",
@@ -87,7 +88,6 @@
     "electron-oauth2": "^3.0.0",
     "electron-regedit": "^2.0.0",
     "electron-window-state": "^4.1.1",
-    "empty-folder": "^2.0.2",
     "eventsource": "^1.0.7",
     "express": "^4.17.1",
     "expressionish": "github:SReject/expressionish#87101258cc46c1cee83a0e7d4c3ca58689ccba27",
@@ -99,10 +99,8 @@
     "glob": "^10.3.10",
     "he": "^1.2.0",
     "howler": "https://github.com/ebiggz/howler.js/tarball/master",
-    "js-convert-case": "^4.1.1",
     "list.js": "^1.5.0",
     "luxon": "^3.1.1",
-    "m3u8stream": "^0.2.2",
     "marked": "^0.7.0",
     "mathjs": "^7.5.1",
     "moment": "^2.24.0",
