--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -30,8 +30,11 @@
     "@mdi/js": "^7.1.96",
     "@mdi/react": "^1.6.1",
     "@next/font": "13.1.6",
+    "@tanstack/react-query": "^5.17.19",
     "assets": "*",
+    "axios": "^1.6.5",
     "clsx": "^1.2.1",
+    "firebot-types": "*",
     "framer-motion": "^9.0.3",
     "mobx": "^6.8.0",
     "mobx-react-lite": "^3.4.0",
