implement automatic registering of auth providers for streaming platforms. Support for DCF.

--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -15,15 +15,16 @@
     "neststart:prod": "node dist/"
   },
   "dependencies": {
-    "@fastify/cookie": "^9.2.0",
+    "@fastify/cookie": "9.2.0",
     "@fastify/static": "^6.9.0",
-    "@nestjs/common": "^10.3.0",
+    "@nestjs/common": "^10.3.1",
     "@nestjs/config": "^3.1.1",
-    "@nestjs/core": "^10.3.0",
-    "@nestjs/platform-fastify": "^10.3.0",
-    "@nestjs/platform-ws": "^10.3.0",
+    "@nestjs/core": "^10.3.1",
+    "@nestjs/event-emitter": "^2.0.3",
+    "@nestjs/platform-fastify": "10.3.0",
+    "@nestjs/platform-ws": "^10.3.1",
     "@nestjs/serve-static": "^4.0.0",
-    "@nestjs/websockets": "^10.3.0",
+    "@nestjs/websockets": "^10.3.1",
     "firebot-types": "*",
     "joi": "^17.11.0",
     "lowdb": "^7.0.1",
@@ -37,9 +38,9 @@
     "ws": "^8.16.0"
   },
   "devDependencies": {
-    "@nestjs/cli": "^10.2.1",
-    "@nestjs/schematics": "^10.0.3",
-    "@nestjs/testing": "^10.3.0",
+    "@nestjs/cli": "^10.3.0",
+    "@nestjs/schematics": "^10.1.0",
+    "@nestjs/testing": "^10.3.1",
     "@types/supertest": "^2.0.11",
     "@types/uuid": "^9.0.7",
     "@types/ws": "^8.5.10",
