Implement and hook up UI for creating / deleting logins for a steaming platform

--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -25,6 +25,11 @@
     "tsconfig": "*"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-brands-svg-icons": "^6.5.1",
+    "@fortawesome/free-regular-svg-icons": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@headlessui/react": "^1.7.11",
     "@heroicons/react": "^2.1.1",
     "@mdi/js": "^7.1.96",
