--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,10 @@
 {
-    "[javascript]": {
-        "editor.formatOnSave": false
-    },
-    "[typescript]": {
-        "editor.formatOnSave": false
-    },
-    "eslint.workingDirectories": [
-        { "mode": "auto" }
-    ]
+  "[javascript]": {
+    "editor.formatOnSave": false
+  },
+  "[typescript]": {
+    "editor.formatOnSave": false
+  },
+  "eslint.workingDirectories": [{ "mode": "auto" }],
+  "javascript.preferences.importModuleSpecifier": "relative"
 }
