--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -25,11 +25,18 @@
     "@nestjs/platform-ws": "^10.3.1",
     "@nestjs/serve-static": "^4.0.0",
     "@nestjs/websockets": "^10.3.1",
+    "@twurple/api": "^7.0.8",
+    "@twurple/auth": "^7.0.8",
+    "@twurple/chat": "^7.0.8",
+    "@twurple/eventsub-ws": "^7.0.8",
+    "@twurple/pubsub": "^7.0.8",
+    "axios": "^1.6.7",
     "firebot-types": "*",
     "joi": "^17.11.0",
     "lowdb": "^7.0.1",
     "node-json-db": "^1.6.0",
     "openid-client": "^5.6.2",
+    "patch-package": "^8.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
     "sanitize-filename": "^1.6.3",
