--- a/package.json
+++ b/package.json
@@ -1,35 +1,39 @@
 {
-    "private": true,
-    "workspaces": [
-        "config/*",
-        "apps/*",
-        "packages/*"
-    ],
-    "devDependencies": {
-        "@types/jest": "29.5.11",
-        "@types/node": "^18.13.0",
-        "@typescript-eslint/eslint-plugin": "^6.16.0",
-        "@typescript-eslint/parser": "^6.16.0",
-        "eslint": "^8.56.0",
-        "eslint-config-custom": "*",
-        "eslint-config-prettier": "^9.1.0",
-        "eslint-plugin-prettier": "^5.1.2",
-        "jest": "29.7.0",
-        "prettier": "^3.1.1",
-        "ts-jest": "29.1.1",
-        "turbo": "^1.11.2",
-        "typescript": "^5.3.3"
-    },
-    "engines": {
-        "node": ">=18.12.1",
-        "npm": ">=8.19.2"
-    },
-    "volta": {
-        "node": "18.12.1",
-        "npm": "8.19.2"
-    },
-    "scripts": {
-        "precompile": "turbo run precompile",
-        "dev": "turbo dev"
-    }
+  "private": true,
+  "workspaces": [
+    "config/*",
+    "apps/*",
+    "packages/*"
+  ],
+  "devDependencies": {
+    "@types/jest": "29.5.11",
+    "@types/node": "^18.13.0",
+    "@typescript-eslint/eslint-plugin": "^6.16.0",
+    "@typescript-eslint/parser": "^6.16.0",
+    "eslint": "^8.56.0",
+    "eslint-config-custom": "*",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.2",
+    "jest": "29.7.0",
+    "prettier": "^3.1.1",
+    "ts-jest": "29.1.1",
+    "turbo": "^1.11.2",
+    "typescript": "^5.3.3"
+  },
+  "engines": {
+    "node": ">=18.12.1",
+    "npm": ">=8.19.2"
+  },
+  "volta": {
+    "node": "18.12.1",
+    "npm": "8.19.2"
+  },
+  "scripts": {
+    "precompile": "turbo run precompile",
+    "dev": "turbo dev",
+    "postinstall": "patch-package"
+  },
+  "dependencies": {
+    "patch-package": "^8.0.0"
+  }
 }
