--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
   "dependencies": {
     "@aws-sdk/client-polly": "^3.26.0",
     "@crowbartools/firebot-custom-scripts-types": "^5.53.2-6",
-    "@nut-tree/nut-js": "^3.1.1",
+    "@nut-tree-fork/nut-js": "^4.2.1",
     "@seald-io/nedb": "^4.0.4",
     "@twurple/api": "^7.1.0",
     "@twurple/auth": "^7.1.0",
