--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "firebotv5",
-    "version": "5.62.1",
+    "version": "5.63.0-beta1",
     "description": "Powerful all-in-one bot for Twitch streamers.",
     "main": "build/main.js",
     "scripts": {
