--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -31,7 +31,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@headlessui/react": "^1.7.11",
-    "@heroicons/react": "^2.1.1",
+    "@heroicons/react": "^2.1.5",
     "@mdi/js": "^7.1.96",
     "@mdi/react": "^1.6.1",
     "@next/font": "13.1.6",
@@ -41,6 +41,7 @@
     "clsx": "^1.2.1",
     "firebot-types": "*",
     "framer-motion": "^9.0.3",
+    "howler": "^2.2.4",
     "mobx": "^6.8.0",
     "mobx-react-lite": "^3.4.0",
     "next": "13.1.6",
