--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -36,6 +36,7 @@
     "@mdi/react": "^1.6.1",
     "@next/font": "13.1.6",
     "@tanstack/react-query": "^5.17.19",
+    "@xyflow/react": "^12.0.3",
     "assets": "*",
     "axios": "^1.6.5",
     "clsx": "^1.2.1",
