--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "@types/fs-extra": "^11.0.4",
         "@types/luxon": "^3.1.0",
         "@types/node": "^18.18.2",
+        "@types/uuid": "^10.0.0",
         "@typescript-eslint/eslint-plugin": "^5.62.0",
         "@typescript-eslint/parser": "^5.62.0",
         "electron": "^28.2.3",
