--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "author": "The Streaming Community",
     "license": "GPL-3.0",
     "devDependencies": {
+        "@types/color-convert": "^2.0.3",
         "@types/express": "^4.17.1",
         "@types/fs-extra": "^11.0.4",
         "@types/luxon": "^3.1.0",
@@ -108,7 +109,7 @@
         "ng-toast": "^2.0.0",
         "ng-youtube-embed": "^1.7.16",
         "node-cache": "^4.2.1",
-        "node-hue-api": "^4.0.11",
+        "node-hue-api": "^5.0.0-beta.16",
         "node-json-db": "^1.4.1",
         "node-xlsx": "^0.20.0",
         "obs-websocket-js": "^5.0.5",
