--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,24 +1,4 @@
 {
-    "compilerOptions": {
-      "module": "CommonJS",
-      "noImplicitAny": false,
-      "esModuleInterop": true,
-      "allowSyntheticDefaultImports": true,
-      "sourceMap": true,
-      "outDir": "build",
-      "allowJs": true,
-      "baseUrl": ".",
-      "rootDir": "./src",
-      "moduleResolution": "node",
-      "skipLibCheck": true,
-      "experimentalDecorators": true,
-      "downlevelIteration": true,
-      "paths": {
-        "*": ["node_modules/*"]
-      },
-      "target": "ES2022"
-    },
-    "include": [
-      "src/**/*",
-    ]
-  }
+    "files": [],
+    "references": [{ "path": "./src" }, { "path": "./src/gui" }]
+}
