--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "author": "The Streaming Community",
     "license": "GPL-3.0",
     "devDependencies": {
+        "@electron/packager": "^18.3.3",
+        "@electron/rebuild": "^3.6.0",
         "@types/color-convert": "^2.0.3",
         "@types/express": "^4.17.1",
         "@types/fs-extra": "^11.0.4",
@@ -29,8 +31,6 @@
         "@typescript-eslint/eslint-plugin": "^5.62.0",
         "@typescript-eslint/parser": "^5.62.0",
         "electron": "^31.4.0",
-        "electron-packager": "^17.1.2",
-        "electron-rebuild": "^1.8.6",
         "eslint": "^8.56.0",
         "eslint-plugin-angular": "^4.0.1",
         "grunt": "^1.4.0",
