--- a/.github/workflows/compile-and-release.yml
+++ b/.github/workflows/compile-and-release.yml
@@ -21,13 +21,13 @@ jobs:
 
     steps:
       - name: Checkout crowbartools/firebot
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
       - name: Read package.json
         id: package
-        uses: gregoranders/nodejs-project-info@v0.0.19
+        uses: gregoranders/nodejs-project-info@v0.0.21
 
       - name: Retrieve package.json version
         id: version
@@ -69,10 +69,10 @@ jobs:
     runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout repo
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Setup Nodejs
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: '20.14.0'
 
@@ -86,7 +86,10 @@ jobs:
       - name: MacOS Build Prep
         if: runner.os == 'macOS'
         # Force install this dep until node-appdmg then electron-installer-dmg gets updated
-        run: npm install github:SReject/electron-installer-dmg#9bdb5217b078c724918271549f34d362aecbf6bb
+        # appdmg will fail to install without python setuptools since gh runners now use python 3.12. See: https://github.com/electron/forge/issues/3371
+        run: |
+          brew install python-setuptools
+          npm install github:SReject/electron-installer-dmg#9bdb5217b078c724918271549f34d362aecbf6bb
 
       - name: Install Global Dependencies
         run: npm install --global --production --omit=dev grunt-cli
