--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "name": "firebot",
   "private": true,
   "workspaces": [
     "config/*",
@@ -6,27 +7,27 @@
     "packages/*"
   ],
   "devDependencies": {
-    "@types/jest": "29.5.11",
-    "@types/node": "^18.13.0",
+    "@types/jest": "29.5.13",
+    "@types/node": "^20.16.9",
     "@typescript-eslint/eslint-plugin": "^6.16.0",
     "@typescript-eslint/parser": "^6.16.0",
     "eslint": "^8.56.0",
     "eslint-config-custom": "*",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.1.2",
+    "eslint-plugin-prettier": "^5.2.1",
     "jest": "29.7.0",
-    "prettier": "^3.1.1",
-    "ts-jest": "29.1.1",
-    "turbo": "^1.11.2",
-    "typescript": "^5.3.3"
+    "prettier": "^3.3.3",
+    "ts-jest": "29.2.5",
+    "turbo": "^2.1.3",
+    "typescript": "^5.6.2"
   },
   "engines": {
-    "node": ">=18.12.1",
-    "npm": ">=8.19.2"
+    "node": ">=20.16.0",
+    "npm": ">=10.8.2"
   },
   "volta": {
-    "node": "18.12.1",
-    "npm": "8.19.2"
+    "node": "20.16.0",
+    "npm": "10.8.2"
   },
   "scripts": {
     "precompile": "turbo run precompile",
@@ -34,6 +35,9 @@
     "postinstall": "patch-package"
   },
   "dependencies": {
-    "patch-package": "^8.0.0"
-  }
+    "patch-package": "^8.0.0",
+    "@nestjs/platform-ws": "^10.4.4",
+    "@nestjs/websockets": "^10.4.4"
+  },
+  "packageManager": "npm@10.8.2"
 }
