--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
         "@twurple/chat": "^7.1.0",
         "@twurple/eventsub-ws": "^7.1.0",
         "@twurple/pubsub": "^7.1.0",
+        "@types/tinycolor2": "^1.4.6",
         "@zunderscore/elgato-light-control": "^1.1.2",
         "angular": "^1.8.0",
         "angular-animate": "^1.7.8",
@@ -119,6 +120,7 @@
         "sanitize-filename": "^1.6.3",
         "socket.io-client": "^2.3.0",
         "tiny-typed-emitter": "^2.1.0",
+        "tinycolor2": "^1.6.0",
         "underscore": "^1.13.1",
         "uuid": "^3.3.3",
         "winston": "^2.4.4",
