--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
         "@typescript-eslint/eslint-plugin": "^5.62.0",
         "@typescript-eslint/parser": "^5.62.0",
         "electron": "^31.4.0",
+        "electron-installer-redhat": "^3.4.0",
+        "electron-installer-debian": "^3.2.0",
         "eslint": "^8.56.0",
         "eslint-plugin-angular": "^4.0.1",
         "grunt": "^1.4.0",
