feat(build): generate deb and rpm installers
Co-authored-by: Patrick Creech <pcreech@redhat.com>

--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
         "@typescript-eslint/eslint-plugin": "^5.62.0",
         "@typescript-eslint/parser": "^5.62.0",
         "electron": "^33.3.1",
+        "electron-installer-debian": "^3.2.0",
+        "electron-installer-redhat": "^3.4.0",
         "electron-winstaller": "^5.4.0",
         "eslint": "^8.56.0",
         "eslint-plugin-angular": "^4.0.1",
