--- a/package.json
+++ b/package.json
@@ -20,24 +20,23 @@
     "author": "The Streaming Community",
     "license": "GPL-3.0",
     "devDependencies": {
-        "@electron/packager": "^18.3.3",
-        "@electron/rebuild": "^3.6.0",
-        "@types/express": "^4.17.1",
-        "@types/fs-extra": "^11.0.4",
+        "@electron/packager": "^18.3.6",
+        "@electron/rebuild": "^3.7.1",
+        "@types/express": "^4.17.21",
         "@types/luxon": "^3.1.0",
-        "@types/node": "^18.18.2",
+        "@types/node": "^20.17.12",
         "@typescript-eslint/eslint-plugin": "^5.62.0",
         "@typescript-eslint/parser": "^5.62.0",
         "electron": "^33.3.1",
+        "electron-winstaller": "^5.4.0",
         "eslint": "^8.56.0",
         "eslint-plugin-angular": "^4.0.1",
-        "grunt": "^1.4.0",
-        "grunt-contrib-compress": "^1.6.0",
+        "grunt": "^1.6.1",
+        "grunt-contrib-compress": "^2.0.0",
         "grunt-contrib-copy": "^1.0.0",
-        "grunt-electron-installer": "^2.1.0",
         "grunt-include-source": "^1.1.0",
         "grunt-sass": "^3.1.0",
-        "grunt-shell": "^3.0.1",
+        "grunt-shell": "^4.0.0",
         "sass": "^1.69.7",
         "typescript": "^5.5.3"
     },
@@ -87,7 +86,7 @@
         "electron-regedit": "^2.0.0",
         "electron-window-state": "^4.1.1",
         "eventsource": "^1.0.7",
-        "express": "^4.17.1",
+        "express": "^4.21.2",
         "expressionish": "github:SReject/expressionish#d277e5d959e5b0cdf50a38a182016752a0de9dd6",
         "extra-life-ts": "^0.4.0",
         "fflate": "^0.8.1",
@@ -109,7 +108,7 @@
         "node-cache": "^4.2.1",
         "node-hue-api": "^5.0.0-beta.16",
         "node-json-db": "^1.4.1",
-        "node-xlsx": "^0.20.0",
+        "node-xlsx": "^0.24.0",
         "obs-websocket-js": "^5.0.5",
         "request": "^2.85.0",
         "roll": "^1.2.0",
@@ -127,7 +126,7 @@
         "electron-installer-dmg": "github:SReject/electron-installer-dmg#9bdb5217b078c724918271549f34d362aecbf6bb"
     },
     "volta": {
-        "node": "20.14.0",
+        "node": "20.18.1",
         "npm": "10.8.1"
     }
 }
