--- a/package.json
+++ b/package.json
@@ -28,8 +28,6 @@
         "@typescript-eslint/eslint-plugin": "^5.62.0",
         "@typescript-eslint/parser": "^5.62.0",
         "electron": "^33.3.1",
-        "electron-installer-debian": "^3.2.0",
-        "electron-installer-redhat": "^3.4.0",
         "electron-winstaller": "^5.4.0",
         "eslint": "^8.56.0",
         "eslint-plugin-angular": "^4.0.1",
@@ -124,7 +122,9 @@
         "yargs-parser": "^21.1.1"
     },
     "optionalDependencies": {
-        "electron-installer-dmg": "github:SReject/electron-installer-dmg#9bdb5217b078c724918271549f34d362aecbf6bb"
+        "electron-installer-debian": "^3.2.0",
+        "electron-installer-dmg": "github:SReject/electron-installer-dmg#9bdb5217b078c724918271549f34d362aecbf6bb",
+        "electron-installer-redhat": "^3.4.0"
     },
     "volta": {
         "node": "20.18.1",
