feat: Debian & Fedora Linux Installers (#2968) (#2984)
* feat(build): generate deb and rpm installers

Co-authored-by: Patrick Creech <pcreech@redhat.com>

* feat(build): add icons & proper name to Linux installers

* chore(build): move linux installers to optDepends for windows support

* chore: switch to custom rpm installer package

* chore: improve install instructions for linux

* chore: add homepage to linux build

* chore: build deb and rpm installers into the Linux directory

* chore: switch to using installer package for file rename, update filenames

---------

Co-authored-by: Patrick Creech <pcreech@redhat.com>
Co-authored-by: Erik Bigler <erikbigler@gmail.com>

--- a/.github/workflows/compile-and-release.yml
+++ b/.github/workflows/compile-and-release.yml
@@ -139,5 +139,7 @@ jobs:
             ./bundles/Windows/firebot-${{ needs.checkversion.outputs.version }}-full.nupkg
             ./bundles/Windows/RELEASES
             ./bundles/Linux/firebot-v${{ needs.checkversion.outputs.version }}-linux-x64.tar.gz
+            ./bundles/Linux/firebot-v${{ needs.checkversion.outputs.version }}-linux-x64.deb
+            ./bundles/Linux/firebot-v${{ needs.checkversion.outputs.version }}-linux-x64.rpm
             ./bundles/macOS/firebot-v${{ needs.checkversion.outputs.version }}-macos-x64.dmg
             ./bundles/macOS/firebot-v${{ needs.checkversion.outputs.version }}-macos-arm64.dmg
