--- a/package.json
+++ b/package.json
@@ -122,6 +122,8 @@
         "yargs-parser": "^21.1.1"
     },
     "optionalDependencies": {
+        "@dennisrijsdijk/electron-installer-redhat": "^3.5.0",
+        "electron-installer-debian": "^3.2.0",
         "electron-installer-dmg": "github:SReject/electron-installer-dmg#9bdb5217b078c724918271549f34d362aecbf6bb"
     },
     "volta": {
