--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -16,12 +16,10 @@
     "autoprefixer": "^10.4.20",
     "eslint-config-custom": "*",
     "eslint-config-next": "14.2.14",
-    "postcss": "^8.4.47",
-    "prettier-plugin-tailwindcss": "^0.6.8",
-    "tailwind-config": "*",
-    "tailwind-scrollbar": "^2.1.0",
-    "tailwindcss": "^3.4.13",
-    "tailwindcss-themer": "^4.0.0",
+    "postcss": "^8.5.2",
+    "prettier-plugin-tailwindcss": "^0.6.11",
+    "tailwind-scrollbar": "^4.0.0",
+    "tailwindcss": "^4.0.6",
     "tsconfig": "*"
   },
   "dependencies": {
@@ -30,14 +28,15 @@
     "@fortawesome/free-regular-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "@headlessui/react": "^2.1.9",
-    "@heroicons/react": "^2.1.5",
+    "@headlessui/react": "^2.2.0",
+    "@heroicons/react": "^2.2.0",
     "@mdi/js": "^7.4.47",
     "@mdi/react": "^1.6.1",
-    "@tanstack/react-query": "^5.59.0",
-    "@xyflow/react": "^12.3.1",
+    "@tailwindcss/postcss": "^4.0.6",
+    "@tanstack/react-query": "^5.66.5",
+    "@xyflow/react": "^12.4.3",
     "assets": "*",
-    "axios": "^1.7.7",
+    "axios": "^1.7.9",
     "clsx": "^2.1.1",
     "firebot-types": "*",
     "framer-motion": "^11.11.1",
